Add auto footer bottom

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,5 +73,8 @@
   body {
     @apply bg-background text-foreground;
     min-height: 100vh;
+    margin: 0;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
   }
 }
